--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Sansita:ital,wght@1,800&display=swap" rel="stylesheet">
 
 <!--CSS-->
-<link rel="stylesheet" type="text/css" href="css/secondarystyle.css"/>
+<link rel="stylesheet" type="text/css" href="..../css/secondarystyle.css"/>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
 	<title>Resume</title>
 </head>
@@ -21,9 +21,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="index.html">Home</a>
-      <a class="nav-item nav-link" href="resume_index.html">Resume<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="portfolio_index.html">Portfolio</a>
+      <a class="nav-item nav-link active" href="https://jaelynwatson.github.io/umdjaewatson.github.io/Home">Home</a>
+      <a class="nav-item nav-link" href="https://jaelynwatson.github.io/umdjaewatson.github.io/Resume">Resume<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="https://jaelynwatson.github.io/umdjaewatson.github.io/Portfolio">Portfolio</a>
     </div>
   </div>
 </nav>
