--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Sansita:ital,wght@1,800&display=swap" rel="stylesheet"/>
 
 <!--CSS-->
-<link rel="stylesheet" type="text/css" href="css/style_three.css"/>
+<link rel="stylesheet" type="text/css" href=".../css/style_three.css"/>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
 	<title>Portfolio</title>
 </head>
@@ -21,9 +21,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="index.html">Home</a>
-      <a class="nav-item nav-link" href="resume_index.html">Resume</a>
-      <a class="nav-item nav-link" href="portfolio_index.html">Portfolio<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="https://jaelynwatson.github.io/umdjaewatson.github.io/Home">Home</a>
+      <a class="nav-item nav-link" href="https://jaelynwatson.github.io/umdjaewatson.github.io/Resume">Resume</a>
+      <a class="nav-item nav-link" href="https://jaelynwatson.github.io/umdjaewatson.github.io/Portfolio">Portfolio<span class="sr-only">(current)</span></a>
     </div>
   </div>
 </nav>
@@ -34,7 +34,7 @@
 <br>
 <div class="row">
 	<div class="col">
-		<a href="https://vimeo.com/378929973"><img src="images/tree_festival.JPG" alt="Festival of Trees" class="center"></a>
+		<a href="https://vimeo.com/378929973"><img src="../images/tree_festival.JPG" alt="Festival of Trees" class="center"></a>
 	</div>
 	<div class="col">
 		<a href="#"><img src="#" alt="Piece Two"></a>
